--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -48,7 +48,7 @@
       /* Contenu par-dessus le fond étoilé */
       .public-content {
         position: relative;
-        z-index: 1;
+        /* z-index removed to avoid creating a stacking context that hides flash behind chatbot */
       }
 
       /* Footer */
