--- a/app/views/public/pages/filtres/_filtres_type.html.erb
+++ b/app/views/public/pages/filtres/_filtres_type.html.erb
@@ -1,6 +1,6 @@
 <div id="filtres-type">
 
-    <div class="dropdown" style="position: relative; z-index: 9999;">
+    <div class="dropdown" style="position: relative;">
         <button class="btn btn-sm btn-outline-light dropdown-toggle" type="button" id="typeDropdown" data-bs-toggle="dropdown" aria-expanded="false">
             <i class="bi bi-tags"></i>
             <span class="ms-1 d-none d-md-inline">
@@ -8,7 +8,7 @@
             </span>
         </button>
 
-        <ul class="dropdown-menu" aria-labelledby="typeDropdown" style="position: absolute; z-index: 9999;">
+        <ul class="dropdown-menu" aria-labelledby="typeDropdown" style="position: absolute;">
             <li>
             <%= button_to "Tous",
                 update_filters_path(
