--- a/app/views/public/pages/filtres/_filtres_couleur.html.erb
+++ b/app/views/public/pages/filtres/_filtres_couleur.html.erb
@@ -1,6 +1,6 @@
 <div id="filtres-couleur">
 
-    <div class="dropdown" style="position: relative; z-index: 9999;">
+    <div class="dropdown" style="position: relative;">
         <button class="btn btn-sm btn-outline-light dropdown-toggle" type="button" id="couleurDropdown" data-bs-toggle="dropdown" aria-expanded="false">
             <i class="bi bi-palette"></i>
             <span class="ms-1 d-none d-md-inline">
@@ -12,7 +12,7 @@
             </span>
         </button>
 
-        <ul class="dropdown-menu" aria-labelledby="couleurDropdown" style="position: absolute; z-index: 9999;">
+        <ul class="dropdown-menu" aria-labelledby="couleurDropdown" style="position: absolute;">
             <li>
             <%= button_to "Toutes",
                 update_filters_path(
