--- a/app/views/public/pages/filtres/_filtres_prix.html.erb
+++ b/app/views/public/pages/filtres/_filtres_prix.html.erb
@@ -1,6 +1,6 @@
 <div id="filtres-prix">
 
-    <div class="dropdown" style="position: relative; z-index: 9999;">
+    <div class="dropdown" style="position: relative;">
         <button class="btn btn-sm btn-outline-light dropdown-toggle" type="button" id="prixDropdown" data-bs-toggle="dropdown" aria-expanded="false">
             <i class="bi bi-currency-euro"></i>
             <span class="ms-1 d-none d-md-inline">
@@ -12,7 +12,7 @@
             </span>
         </button>
 
-        <ul class="dropdown-menu" aria-labelledby="prixDropdown" style="position: absolute; z-index: 9999;">
+        <ul class="dropdown-menu" aria-labelledby="prixDropdown" style="position: absolute;">
             <li>
             <%= button_to "Tous",
                 update_filters_path(
