--- a/app/views/public/shared/_navbar.html.erb
+++ b/app/views/public/shared/_navbar.html.erb
@@ -4,17 +4,7 @@
     <%= link_to image_tag('/images/a1soir_logo_white.png', class: 'navbar-brand', width: "180", alt: "Logo"), root_url %>
 
     <div class="d-flex align-items-center gap-3 order-lg-2">
-      <% if ENV["ONLINE_SALES_AVAILABLE"] == "true" %>
-        <%= link_to cart_url, class: "text-decoration-none brand-colored position-relative ms-4 d-none d-lg-block" do %>
-          <i class="bi bi-bag fs-4"></i>
-          <% if @cart.size > 0 %>
-            <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-brand-colored small">
-              <%= @cart.size %>
-              <span class="visually-hidden">articles dans le panier</span>
-            </span>
-          <% end %>
-        <% end %>
-      <% end %>
+      <%= render partial: "public/shared/cart_nav_link" %>
 
       <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
