--- a/app/views/admin/home_admin/_blocLarge.html.erb
+++ b/app/views/admin/home_admin/_blocLarge.html.erb
@@ -31,7 +31,7 @@
         <%= options_supplementaires_link(admin_couleurs_path, "bi-palette", "Couleurs", "btn-outline-dark") if current_admin_user.admin? %>
         <%= options_supplementaires_link(admin_tailles_path, "bi-rulers", "Tailles", "btn-outline-secondary") if current_admin_user.admin? %>
         <%= options_supplementaires_link(admin_admin_parameters_path, "bi-gear", "Parametres", "btn-outline-warning") if current_admin_user.admin? %>
-        <%= options_supplementaires_link(admin_demande_cabine_essayages_path, "bi-cart-check", "Demandes cabine", "btn-outline-danger") if current_admin_user.admin? %>
+        <%= options_supplementaires_link(admin_demande_cabine_essayages_path, "bi-cart-check", "Demandes cabine", "btn-outline-danger", badge_count: DemandeCabineEssayage.where(statut: "soumis").count) if current_admin_user.admin? %>
 
         <%= options_supplementaires_link(root_url(subdomain: "shop"), "bi-house", "Site public", "btn-outline-primary") %>
         <%= options_supplementaires_link(admin_home_admin_scan_qr_path, "bi-qr-code-scan", "Scan", "btn-primary") %>
