--- a/app/views/public/pages/home.html.erb
+++ b/app/views/public/pages/home.html.erb
@@ -1,5 +1,10 @@
 <%= render 'home_hero' %>
 
+<!-- Flèche animée pour inviter au scroll -->
+<div class="scroll-indicator">
+  <i class="bi bi-chevron-down"></i>
+</div>
+
 <!-- Section d'accueil -->
 <div class="public-main-content">
   <div class="container-fluid">
