--- a/app/views/public/shared/_navbar.html.erb
+++ b/app/views/public/shared/_navbar.html.erb
@@ -1,9 +1,9 @@
 
-<nav class="navbar navbar-expand-lg navbar-dark shadow-sm sticky-top">
+<nav class="navbar navbar-expand-xl navbar-dark shadow-sm sticky-top">
   <div class="container">
     <%= link_to image_tag('/images/a1soir_logo_white.png', class: 'navbar-brand', width: "180", alt: "Logo"), root_url %>
 
-    <div class="d-flex align-items-center gap-3 order-lg-2">
+    <div class="d-flex align-items-center gap-3 order-xl-2">
       <%= render partial: "public/shared/cart_nav_link" %>
 
       <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
@@ -11,14 +11,14 @@
       </button>
     </div>
 
-    <div class="collapse navbar-collapse order-lg-1" id="navbar">
+    <div class="collapse navbar-collapse order-xl-1" id="navbar">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <%= nav_link_public(home_path, "Accueil") %>
-        <%= nav_link_public(la_boutique_url, "La boutique de Cannes") %>
-        <%= nav_link_public(nos_collections_url, "Nos collections") %>
+        <%= nav_link_public(la_boutique_url, "Boutique") %>
+        <%= nav_link_public(nos_collections_url, "Collections") %>
         <%= cabine_nav_link_item(badge_count: session[:cabine_cart]&.size) %>
-        <%= nav_link_public(le_concept_url, "Le concept") %>
-        <%= nav_link_public(nos_autres_activites_url, "Nos autres activités") %>
+        <%= nav_link_public(le_concept_url, "Concept") %>
+        <%= nav_link_public(nos_autres_activites_url, "Autres activités") %>
         <%= nav_link_public(legal_url, "Légal") %>
         <%= nav_link_public(faq_url, "FAQ") %>
 
