--- a/app/views/public/pages/home.html.erb
+++ b/app/views/public/pages/home.html.erb
@@ -26,7 +26,7 @@
             tenues d'exception
           </p>
           <p class="description-subtext">
-            Que ce soit pour un mariage, une soirée ou un événement professionnel, 
+            Un mariage, une soirée ou un événement professionnel :
             nous vous accompagnons pour sublimer vos plus beaux moments.
           </p>
         </div>
