protect shop by user and mdp

--- a/app/views/public/pages/le_concept.html.erb
+++ b/app/views/public/pages/le_concept.html.erb
@@ -6,7 +6,7 @@
     <div class="text-center my-5 px-3" data-scroll-reveal>
       <h2 class="mb-4 fw-bold text-light">Une nouvelle façon de vivre la mode</h2>
       <p class="lead text-light opacity-75 mx-auto" style="max-width: 800px;">
-        A1soir révolutionne votre expérience vestimentaire avec un concept innovant qui allie élégance, 
+        Autour d'un soir révolutionne votre expérience vestimentaire avec un concept innovant qui allie élégance, 
         accessibilité et personnalisation. Que ce soit pour un mariage, une soirée ou un événement spécial, 
         nous vous offrons la liberté de choisir comment porter la mode.
       </p>
