--- a/app/views/public/pages/la_boutique.html.erb
+++ b/app/views/public/pages/la_boutique.html.erb
@@ -11,7 +11,7 @@
         <!-- Section Équipe -->
         <% if @texteEquipe.present? %>
           <div class="m-4 p-4" data-scroll-reveal>
-              <h3 class="text-center brand-colored mb-4">Notre équipe</h3>
+              <h3 class="text-center public-brand-color mb-4">Notre équipe</h3>
               <div class="row align-items-center g-4">
                   <div class="col-12 col-md-6">
                       <%= image_tag("equipe1.jpg", class: "img-fluid rounded shadow") %>
