--- a/app/views/public/pages/legal.html.erb
+++ b/app/views/public/pages/legal.html.erb
@@ -10,32 +10,32 @@
           <div class="row g-3">
             <div class="col-md-4">
               <a href="#mentions-legales" class="text-decoration-none text-light">
-                <i class="bi bi-chevron-right brand-colored me-2"></i>Mentions légales
+                <i class="bi bi-chevron-right public-brand-color me-2"></i>Mentions légales
               </a>
             </div>
             <div class="col-md-4">
               <a href="#cgv" class="text-decoration-none text-light">
-                <i class="bi bi-chevron-right brand-colored me-2"></i>Conditions générales de vente
+                <i class="bi bi-chevron-right public-brand-color me-2"></i>Conditions générales de vente
               </a>
             </div>
             <div class="col-md-4">
               <a href="#cgl" class="text-decoration-none text-light">
-                <i class="bi bi-chevron-right brand-colored me-2"></i>Conditions de location
+                <i class="bi bi-chevron-right public-brand-color me-2"></i>Conditions de location
               </a>
             </div>
             <div class="col-md-4">
               <a href="#confidentialite" class="text-decoration-none text-light">
-                <i class="bi bi-chevron-right brand-colored me-2"></i>Politique de confidentialité
+                <i class="bi bi-chevron-right public-brand-color me-2"></i>Politique de confidentialité
               </a>
             </div>
             <div class="col-md-4">
               <a href="#cookies" class="text-decoration-none text-light">
-                <i class="bi bi-chevron-right brand-colored me-2"></i>Politique des cookies
+                <i class="bi bi-chevron-right public-brand-color me-2"></i>Politique des cookies
               </a>
             </div>
             <div class="col-md-4">
               <a href="#propriete" class="text-decoration-none text-light">
-                <i class="bi bi-chevron-right brand-colored me-2"></i>Propriété intellectuelle
+                <i class="bi bi-chevron-right public-brand-color me-2"></i>Propriété intellectuelle
               </a>
             </div>
           </div>
